--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Dream</title>
+  <title>Yummy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap"></script>
+  <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
 <body>
   <app-root></app-root>
